--- a/02_times.ipynb
+++ b/02_times.ipynb
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -1221,6 +1221,10 @@
     "    import geopandas\n",
     "except ImportError:\n",
     "    !pip install geopandas\n",
+    "    \n",
+    "try:\n",
+    "    import geodatasets\n",
+    "except ImportError:\n",
     "    !pip install geodatasets"
    ]
   },
